| Summary: | ASTERISK-28942: res_sorcery_memory_cache: Individual object expiration behaves unexpectedly with full backend caching | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2020-06-10 04:35:10 | Date Closed: | 2020-06-18 17:58:03 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_sorcery_memory_cache |
| Versions: | 13.33.0 16.10.0 17.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When expiring an individual object over AMI or the CLI in the sorcery memory cache it is expected that the object will be updated soon after. With full backend caching this does not occur and instead the object remains removed until a full backend update occurs. This is behavior which can be unexpected for some people. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2020-06-18 17:58:04.018-0500 Change 14511 merged by Friendly Automation: res_sorcery_memory_cache: Disallow per-object expire with full backend. [https://gerrit.asterisk.org/c/asterisk/+/14511|https://gerrit.asterisk.org/c/asterisk/+/14511] By: Friendly Automation (friendly-automation) 2020-06-18 18:03:56.962-0500 Change 14539 merged by Friendly Automation: res_sorcery_memory_cache: Disallow per-object expire with full backend. [https://gerrit.asterisk.org/c/asterisk/+/14539|https://gerrit.asterisk.org/c/asterisk/+/14539] By: Friendly Automation (friendly-automation) 2020-06-18 18:34:08.777-0500 Change 14541 merged by Friendly Automation: res_sorcery_memory_cache: Disallow per-object expire with full backend. [https://gerrit.asterisk.org/c/asterisk/+/14541|https://gerrit.asterisk.org/c/asterisk/+/14541] By: Friendly Automation (friendly-automation) 2020-06-18 18:36:46.147-0500 Change 14540 merged by Friendly Automation: res_sorcery_memory_cache: Disallow per-object expire with full backend. [https://gerrit.asterisk.org/c/asterisk/+/14540|https://gerrit.asterisk.org/c/asterisk/+/14540] | ||